@@ -131,8 +131,8 @@ BUILDFLAGS = -DPRINT_SOMEERRORS_STDOUT \
 
 # The next two flags are dependend - you can only have CLB_MEMORY_DEBUG
 # if you don't have NDEBUG!
-MEMDEBUG   = # -DCLB_MEMORY_DEBUG # -DCLB_MEMORY_DEBUG2
-NODEBUG    = -DNDEBUG -DFAST_EXIT
+MEMDEBUG   = -DCLB_MEMORY_DEBUG # -DCLB_MEMORY_DEBUG2
+NODEBUG    = # -DNDEBUG -DFAST_EXIT
 PROFFLAGS  = # -pg
 DEBUGGER   = # -g -ggdb
 LTOFLAGS   = # -flto
